manifests/west/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: west-ingress
  labels:
    istio-injection: enabled
