manifests/west/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: west-ingress
  namespace: west-ingress
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      hostname: west-ingress.example.com
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
